--- a/OurBigDay.html
+++ b/OurBigDay.html
@@ -17,7 +17,7 @@
 </script>
 </head>
 <body>
-<a href="index.php"><img class="backhome" src="images/backtohome.png" /></a>
+<a href="index.html"><img class="backhome" src="images/backtohome.png" /></a>
 <div class="content">
     <p class="bigday"> Our Big Day</p>
     <img class="bigday_img" src="images/bigday.png" />
