--- a/OurStory.html
+++ b/OurStory.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="content">
-<a href="index.php"><img class="backhome" src="images/backtohome.png" /></a>
+<a href="index.html"><img class="backhome" src="images/backtohome.png" /></a>
 <img src="images/story.png" class="content_image"/>
 </div>
 </body>
