--- a/Photos.html
+++ b/Photos.html
@@ -24,7 +24,7 @@
 </head>
 <body style="background-image:url(images/red_bg_pat.png);background-repeat:repeat-x repeat-y;">
 <div style="position:fixed;top:150px;left:20px;"><img src="images/2hearts.png" /></div>
-<a href="index.php"><img style="position:fixed;	left:1150px;top:300px;" src="images/backtohome.png" /></a>
+<a href="index.html"><img style="position:fixed;	left:1150px;top:300px;" src="images/backtohome.png" /></a>
 	<!-- Start WOWSlider.com BODY section -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
@@ -40,6 +40,7 @@
 <li><img src="data1/images/image_10.jpg" alt="On top of the 'mall' :P" title="On top of the 'mall' :P" id="wows1_9"/></li>
 <li><img src="data1/images/image_7.jpg" alt="A Lovey-Dovey Selfie !" title="A Lovey-Dovey Selfie !" id="wows1_10"/></li>
 <li><img src="data1/images/image_11.png" alt="Our Favorite :)" title="Our Favorite :)" id="wows1_11"/></li>
+<li><img src="data1/images/image_12.jpg" alt="New one" title="New one:)" id="wows1_12"/></li>
 </ul></div>
 <div class="ws_bullets"><div>
 <a href="#wows1_0" title="One of those 'moments' captured ;)">1</a>
@@ -54,6 +55,7 @@
 <a href="#wows1_9" title="On top of the 'mall' :P">10</a>
 <a href="#wows1_10" title="A Lovey-Dovey Selfie !">11</a>
 <a href="#wows1_11" title="Our Favorite :)">12</a>
+<a href="#wows1_12" title="New one :)">12</a>
 </div></div>
 <span class="wsl"><a href="http://wowslider.com">jquery photo gallery</a> by WOWSlider.com v5.4</span>
 	<div class="ws_shadow"></div>
