--- a/Reception.html
+++ b/Reception.html
@@ -19,7 +19,7 @@
 <body>
 
 <div class="content">
-<a href="index.php"><img class="backhome" src="images/backtohome_recp.png" /></a>
+<a href="index.html"><img class="backhome" src="images/backtohome_recp.png" /></a>
 <p class="recption">Wedding Receptions !</p>
 <img src="images/RECEPTION1.png" />
 <p class="tlydir">Directions to Thalassery Town Hall - <a href="https://www.google.co.in/maps/place/Town+Hall/@11.752064,75.498153,17z/data=!4m5!1m2!2m1!1sthalassery+town+hall!3m1!1s0x3ba42648cacf9543:0x8b6359f0a1e560ab" target="_blank">View on Map</a></p>
